# leetcode

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_leetcode.py
