[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Philippe <philippe.beaudequin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-cov = "^2.12.1"
pytest-xdist = "^2.3.0"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
